--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Calculadora PhenoAge - VitalExtension</title>
+<meta name="robots" content="noindex">
+
 <style>
     :root {
       --color-principal: #2c3e50;
